Desktop header nav finished, Mobile; z-index fixing and will change to hidden as I did on modals.

--- a/src/style.css
+++ b/src/style.css
@@ -3,9 +3,8 @@
 @tailwind utilities;
 
 @layer components {
-    .btn-pink {
-        @apply
-    }
+
+
     .btn-blue {
         @apply
     }
@@ -15,4 +14,10 @@
     .btn-outline-blue {
         @apply
     }
+}
+.btn {
+    @apply p-[6px_16px_8px] rounded-full drop-shadow-sm text-base font-semibold
+}
+.btn-pink {
+    @apply transition-all ease-in duration-75 text-pink-50 bg-gradient-to-r from-pink-500 via-pink-700 to-pink-800  hover:bg-gradient-to-br focus:ring-2 focus:outline-none focus:ring-pink-300
 }
